--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client-hooks-mvn-compile",
   "version": "0.0.1",
-  "description": "a client-hooks plugin which use maven compile check.",
+  "description": "The client-hooks plugin which use maven compile check.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
