--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The client-hooks plugin which use maven compile check.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "node scripts/install.js",
+    "postuninstall": "node scripts/postuninstall.js"
   },
   "repository": {
     "type": "git",
